k8s/prod-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: password-gen-env-prod
  labels:
    env: prod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: pv-claim
  containers:
    - name: password-gen-env
      image: localhost:32000/password-gen-env:v1.0.0
      volumeMounts:
        - mountPath: "/logs"
          name: pv-storage
