k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: demo
  name: password-gen-env-demo
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    env: demo
