k8s/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: prod
  name: password-gen-env-prod
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    env: prod
